--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "npm": ">=3.0.0"
   },
   "scripts": {
-    "lint": "aegir-lint",
-    "coverage": "gulp coverage",
-    "test": "gulp test --dom",
-    "test:node": "npm run test:unit:node",
-    "test:browser": "npm run test:unit:browser",
-    "test:unit:node": "gulp test:node",
-    "test:unit:node:core": "TEST=core npm run test:unit:node",
-    "test:unit:node:http": "TEST=http npm run test:unit:node",
-    "test:unit:node:gateway": "TEST=gateway npm run test:unit:node",
-    "test:unit:node:cli": "TEST=cli npm run test:unit:node",
-    "test:unit:browser": "gulp test:browser",
+    "lint": "aegir lint",
+    "build": "aegir build",
+    "test": "aegir test --target node --target browser --no-parallel",
+    "test:node": "aegir test --target node --no-parallel",
+    "test:browser": "aegir test --target browser --no-parallel",
+    "release": "aegir test release --target node --target browser --no-parallel",
+    "release-minor": "aegir release --type minor --target node --target browser --no-parallel",
+    "release-major": "aegir release --type major --target node --target browser --no-parallel",
+    "coverage": "aegir coverage",
+    "test:unit:node": "aegir test --target node --no-parallel",
+    "test:unit:node:core": "TEST=core aegir test --target node --no-parallel",
+    "test:unit:node:http": "TEST=http aegir test --target node --no-parallel  ",
+    "test:unit:node:gateway": "TEST=gateway aegir test --target node --no-parallel",
+    "test:unit:node:cli": "TEST=cli aegir test --target node --no-parallel",
+    "test:unit:browser": "aegir test --target browser --no-parallel",
     "test:interop": "npm run test:interop:node",
     "test:interop:node": "mocha -t 60000 test/interop/node.js",
     "test:interop:browser": "mocha -t 60000 test/interop/browser.js",
@@ -38,10 +42,6 @@
     "test:benchmark:node:core": "echo \"Error: no benchmarks yet\" && exit 1",
     "test:benchmark:node:http": "echo \"Error: no benchmarks yet\" && exit 1",
     "test:benchmark:browser": "echo \"Error: no benchmarks yet\" && exit 1",
-    "build": "gulp build",
-    "release": "gulp release",
-    "release-minor": "gulp release --type minor",
-    "release-major": "gulp release --type major",
     "coverage-publish": "aegir-coverage publish"
   },
   "pre-commit": [
@@ -62,7 +62,7 @@
   },
   "homepage": "https://github.com/ipfs/js-ipfs#readme",
   "devDependencies": {
-    "aegir": "^11.0.2",
+    "aegir": "^12.1.1",
     "buffer-loader": "0.0.1",
     "chai": "^4.1.2",
     "delay": "^2.0.0",
@@ -123,14 +123,14 @@
     "libp2p-multiplex": "~0.5.0",
     "libp2p-railing": "~0.7.1",
     "libp2p-secio": "~0.8.1",
-    "libp2p-tcp": "~0.11.1",
+    "libp2p-tcp": "^0.11.1",
     "libp2p-webrtc-star": "~0.13.2",
-    "libp2p-websockets": "~0.10.2",
+    "libp2p-websockets": "^0.10.4",
     "lodash.flatmap": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.sortby": "^4.7.0",
     "lodash.values": "^4.3.0",
-    "mafmt": "^3.0.1",
+    "mafmt": "^3.0.2",
     "mime-types": "^2.1.17",
     "mkdirp": "~0.5.1",
     "multiaddr": "^3.0.1",
