--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "lint": "aegir lint",
     "build": "aegir build",
-    "test": "aegir test --target node --target browser --no-cors --no-parallel --timeout 10000",
+    "test": "aegir test --target node --target browser --no-cors --no-parallel",
     "test:node": "aegir test --target node --no-parallel",
     "test:browser": "aegir test --target browser --no-parallel",
     "release": "aegir test release --target node --target browser --no-parallel",
