--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "dir-compare": "^1.4.0",
     "dirty-chai": "^2.0.1",
     "eslint-plugin-react": "^7.4.0",
-    "execa": "^0.8.0",
-    "expose-loader": "^0.7.3",
+    "execa": "~0.8.0",
+    "expose-loader": "~0.7.3",
     "form-data": "^2.3.1",
     "gulp": "^3.9.1",
     "interface-ipfs-core": "~0.33.1",
@@ -80,21 +80,21 @@
     "lodash": "^4.17.4",
     "mocha": "^4.0.1",
     "ncp": "^2.0.0",
-    "nexpect": "^0.5.0",
+    "nexpect": "~0.5.0",
     "pre-commit": "^1.2.2",
     "pretty-bytes": "^4.0.2",
     "qs": "^6.5.1",
     "random-fs": "^1.0.3",
     "rimraf": "^2.6.2",
     "stream-to-promise": "^2.2.0",
-    "transform-loader": "^0.2.4"
+    "transform-loader": "~0.2.4"
   },
   "dependencies": {
     "async": "^2.5.0",
     "bl": "^1.2.1",
     "boom": "^6.0.0",
     "byteman": "^1.3.5",
-    "cids": "^0.5.2",
+    "cids": "~0.5.2",
     "debug": "^3.1.0",
     "file-type": "^7.2.0",
     "filesize": "^3.5.11",
@@ -105,46 +105,46 @@
     "hapi-set-header": "^1.0.2",
     "hoek": "^5.0.1",
     "ipfs-api": "^14.3.7",
-    "ipfs-bitswap": "^0.17.2",
-    "ipfs-block": "^0.6.0",
-    "ipfs-block-service": "^0.12.0",
-    "ipfs-multipart": "^0.1.0",
-    "ipfs-repo": "^0.17.0",
-    "ipfs-unixfs": "^0.1.13",
-    "ipfs-unixfs-engine": "^0.22.5",
-    "ipld-resolver": "^0.13.4",
-    "is-ipfs": "^0.3.2",
+    "ipfs-bitswap": "~0.17.2",
+    "ipfs-block": "~0.6.0",
+    "ipfs-block-service": "~0.12.0",
+    "ipfs-multipart": "~0.1.0",
+    "ipfs-repo": "~0.17.0",
+    "ipfs-unixfs": "~0.1.13",
+    "ipfs-unixfs-engine": "~0.22.5",
+    "ipld-resolver": "~0.13.4",
+    "is-ipfs": "~0.3.2",
     "is-stream": "^1.1.0",
     "joi": "^13.0.1",
-    "libp2p": "^0.13.0",
-    "libp2p-floodsub": "^0.11.1",
-    "libp2p-kad-dht": "^0.5.1",
-    "libp2p-mdns": "^0.9.1",
-    "libp2p-multiplex": "^0.5.0",
-    "libp2p-railing": "^0.7.1",
-    "libp2p-secio": "^0.8.1",
-    "libp2p-tcp": "^0.11.1",
-    "libp2p-webrtc-star": "^0.13.2",
-    "libp2p-websockets": "^0.10.4",
+    "libp2p": "~0.13.0",
+    "libp2p-floodsub": "~0.11.1",
+    "libp2p-kad-dht": "~0.5.1",
+    "libp2p-mdns": "~0.9.1",
+    "libp2p-multiplex": "~0.5.0",
+    "libp2p-railing": "~0.7.1",
+    "libp2p-secio": "~0.8.1",
+    "libp2p-tcp": "~0.11.1",
+    "libp2p-webrtc-star": "~0.13.2",
+    "libp2p-websockets": "~0.10.4",
     "lodash.flatmap": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.sortby": "^4.7.0",
     "lodash.values": "^4.3.0",
     "mafmt": "^3.0.2",
     "mime-types": "^2.1.17",
-    "mkdirp": "^0.5.1",
+    "mkdirp": "~0.5.1",
     "multiaddr": "^3.0.1",
-    "multihashes": "^0.4.12",
+    "multihashes": "~0.4.12",
     "once": "^1.4.0",
     "path-exists": "^3.0.0",
-    "peer-book": "^0.5.1",
-    "peer-id": "^0.10.2",
-    "peer-info": "^0.11.0",
+    "peer-book": "~0.5.1",
+    "peer-id": "~0.10.2",
+    "peer-info": "~0.11.0",
     "progress": "^2.0.0",
     "promisify-es6": "^1.0.3",
     "pull-abortable": "^4.1.1",
     "pull-file": "^1.0.0",
-    "pull-ndjson": "^0.1.1",
+    "pull-ndjson": "~0.1.1",
     "pull-paramap": "^1.2.2",
     "pull-pushable": "^2.1.1",
     "pull-sort": "^1.0.1",
@@ -156,14 +156,14 @@
     "safe-buffer": "^5.1.1",
     "stream-to-pull-stream": "^1.7.2",
     "tar-stream": "^1.5.4",
-    "temp": "^0.8.3",
+    "temp": "~0.8.3",
     "through2": "^2.0.3",
     "update-notifier": "^2.3.0",
     "yargs": "^9.0.1"
   },
   "optionalDependencies": {
     "prom-client": "^10.2.0",
-    "prometheus-gc-stats": "^0.5.0"
+    "prometheus-gc-stats": "~0.5.0"
   },
   "contributors": [
     "Andrew de Andrade <andrew@deandrade.com.br>",
