--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "detect-node": "^2.0.3",
     "dir-compare": "^1.4.0",
     "dirty-chai": "^2.0.1",
+    "eslint-config-standard-jsx": "^4.0.2",
     "eslint-plugin-react": "^7.4.0",
     "execa": "^0.8.0",
     "expose-loader": "^0.7.3",
@@ -103,7 +104,7 @@
     "glob": "^7.1.2",
     "hapi": "^16.6.2",
     "hapi-set-header": "^1.0.2",
-    "hoek": "^5.0.1",
+    "hoek": "^5.0.2",
     "ipfs-api": "^14.3.7",
     "ipfs-bitswap": "~0.17.2",
     "ipfs-block": "~0.6.0",
@@ -117,6 +118,7 @@
     "is-stream": "^1.1.0",
     "joi": "^13.0.1",
     "libp2p": "~0.13.0",
+    "libp2p-circuit": "~0.1.4",
     "libp2p-floodsub": "~0.11.1",
     "libp2p-kad-dht": "~0.5.1",
     "libp2p-mdns": "~0.9.1",
